# ironbee

./: .ctags  .gdbinit  .gitignore  .gitmodules  .mailmap  .project  .travis.yml  AUTHORS  CHANGES  CHANGES.adoc  CHANGES.md  CODESTYLE  CODESTYLE.adoc  CODESTYLE.md  COPYING  ChangeLog  DEVELOPMENT  DEVELOPMENT.adoc  DEVELOPMENT.md  INSTALL  LICENSE  Makefile  Makefile.am  NEWS  NOTICE  README  README.adoc  README.md  VERSION  authors.txt  autogen.sh  configure.ac  get-version.sh  htp.pc.in  ironbee.pc.in  ironbee_config_auto.h
automata/: Makefile.am  ac_generator.cpp  ac_generator.rb  aho_corasick.cpp  bench.cpp  buffer.cpp  deduplicate_outputs.cpp  ec.cpp  eudoxus.c  eudoxus_automata.c  eudoxus_compiler.cpp  eudoxus_subengine.c  extract_fast.rb  intermediate.cpp  intermediate.pb.rb  intermediate.proto  intermediate.rb  intermediate_to_dot.cpp  logger.cpp  optimize.cpp  optimize_edges.cpp  to_dot.cpp  translate_nonadvancing.cpp
cli/: Makefile.am  ibcli.c  pycli
clipp/: Makefile.am  aggregate_modifier.cpp  aggregate_modifier.hpp  apache_generator.cpp  apache_generator.hpp  burp_generator.cpp  burp_generator.hpp  clipp.adoc  clipp.cpp  clipp.html  clipp.md  clipp.pb.cc  clipp.pb.h  clipp.pb.rb  clipp.proto  clipp_test.rb  clippdev.adoc  clippdev.html  clippscript.adoc  clippscript.html  clippscript.md  clippscript.rb  configuration_parser.cpp  configuration_parser.hpp  connection_modifiers.cpp  connection_modifiers.hpp  control.hpp  echo_generator.cpp  echo_generator.hpp  edit_modifier.cpp  edit_modifier.hpp  fill_body_modifier.cpp  fill_body_modifier.hpp  hash_to_pb.rb  header_modifiers.cpp  header_modifiers.hpp  htp_consumer.cpp  htp_consumer.hpp  htp_generator.cpp  htp_generator.hpp  (+49 more)
cpp/: Makefile.am  audit_log.cpp  audit_log.hpp  audit_log_generator.cpp  audit_log_generator.hpp  ibcli_cpp.cpp  input.cpp  input.hpp  ironbee.cpp  ironbee.hpp  modsec_audit_log.cpp  modsec_audit_log.hpp  modsec_audit_log_generator.cpp  modsec_audit_log_generator.hpp  raw_generator.cpp  raw_generator.hpp
docs/: COMPATIBILITY_CHANGES  LibHTP_Manual.xml  LibHTP_Manual.xpr  Makefile.am  ProcessingFlow.odg  QUICK_START  doxygen.conf  external.doxy  external.doxy.in  fulldocs.doxy  fulldocs.doxy.in  internal.doxy  internal.doxy.in
engine/: Makefile.am  action.c  capture.c  collection_manager.c  collection_manager_private.h  config-parser.c  config-parser.h  config-parser.rl  config.c  config_private.h  context_selection.c  core.c  core_actions.c  core_audit.c  core_audit_private.h  core_collection_managers.c  core_context_selection.c  core_fields.c  core_filter.c  core_filter_private.h  core_operators.c  core_private.h  core_stream_processor.c  core_stream_processor_private.h  core_tfns.c  core_vars.c  data.c  engine.c  engine_manager.c  engine_manager_control_channel.c  engine_manager_log.c  engine_manager_log_private.h  engine_manager_private.h  engine_private.h  filter.c  ironbee_core_private.h  ironbee_parsed_content_private.h  ironbee_private.h  log.c  logevent.c  (+26 more)
etc/: Makefile.am  ironbee-cli.conf.example  ironbee-httpd.conf.example  ironbee-trafficserver.conf.example  ironbee.conf  ironbee.conf.example  ironbee_trafficserver.conf.example  site-1.conf  site-2.conf  site-default.conf
example_modules/: Makefile.am  ibmod_set.c  ibmod_set_c.c  ibmod_set_cpp.cpp
example_servers/: Makefile.am  parsed_c.c  unparsed_cpp.cpp
fast/: Makefile.am  build.rb  extract.rb  extract_waggle.rb  fast.adoc  fast.html  fast.md  generate.cpp  re_to_ac.rb  suggest.rb  test_re_to_ac.rb
htp/: Makefile.am  TODO  bstr.c  bstr.h  bstr_builder.c  bstr_builder.h  dslib.c  dslib.h  hooks.c  hooks.h  htp.c  htp.h  htp_base64.c  htp_base64.h  htp_config.c  htp_config.h  htp_config_private.h  htp_connection.c  htp_connection.h  htp_connection_parser.c  htp_connection_parser.h  htp_connection_parser_private.h  htp_connection_private.h  htp_content_handlers.c  htp_cookies.c  htp_core.h  htp_decompressors.c  htp_decompressors.h  htp_definitions.h  htp_hooks.c  htp_hooks.h  htp_hybrid.h  htp_list.c  htp_list.h  htp_list_private.h  htp_multipart.c  htp_multipart.h  htp_multipart_private.h  htp_parsers.c  htp_php.c  (+25 more)
ibctl/: Makefile.am  ibctl.cpp
ironbeepp/: Makefile.am  action.cpp  builder.cpp  byte_string.cpp  catch.cpp  clock.cpp  configuration_directives.cpp  configuration_map.cpp  configuration_parser.cpp  connection.cpp  connection_data.cpp  context.cpp  context.hpp  context_data.hpp  data.cpp  data.hpp  engine.cpp  engine_data.hpp  field.cpp  hooks.cpp  ironbee.cpp  json.cpp  logevent.cpp  memory_manager.cpp  memory_pool.cpp  memory_pool_data.hpp  memory_pool_lite.cpp  module.cpp  module_bootstrap.cpp  module_data.hpp  module_delegate.cpp  module_delegate.hpp  notifier.cpp  operator.cpp  parsed_header.cpp  parsed_name_value.cpp  parsed_request_line.cpp  parsed_response_line.cpp  parser_suite_adaptors.cpp  rule.cpp  (+9 more)
libs/: Makefile.am
lua/: Makefile.am  apidoc.h  event_processor.lua  example-ffi.lua  example.lua  example_rule.lua  example_rule1.lua  ironbee-api.lua  ironbee-ffi.lua  ironbee-modlua.lua  ironbee.c  ironbee.h  list-registered.lua  lua.adoc  lua.html  lua_apidoc.h  predicate-primitives.lua  qa.lua  test_lua.cpp  threat_level.lua  waggledoc.h
modules/: Makefile.am  abort.c  ac.c  ats-txlog.c  authscan.cpp  binradix.c  block.cpp  clipp_test_support.cpp  constant.cpp  constant.h  ee_oper.c  engine_shutdown.cpp  engine_shutdown.hpp  error_page.cpp  fast.c  fields.c  geoip.c  graceful_shutdown.cpp  header_order.cpp  htp.c  ibmod_txvars.lua  ident.c  ident_authbasic.c  inflate_processor.cpp  init_collection.c  libinjection.c  log_pipe.c  logmsg.c  lua.c  lua_common.c  lua_common_private.h  lua_modules.c  lua_modules_private.h  lua_private.h  lua_rules.c  lua_rules_private.h  lua_runtime.c  lua_runtime_private.h  moddevel.c  moddevel_private.h  (+68 more)
predicate/: Makefile.am  bfs.cpp  bfs.hpp  call_factory.cpp  call_factory.hpp  call_helpers.cpp  call_helpers.hpp  dag.cpp  dag.hpp  developer.html  developer.md  developer_notes.adoc  developer_notes.html  dot.cpp  dot.hpp  dot2.cpp  dot2.hpp  eval.cpp  (+96 more)
(+1306 files in other folders)
